Change history for Perl extension PDF::Table.

Version 0.12.0 (preliminary) 

 Permit either PDF::API2 or PDF::Builder (#51)
 Don't use UTF-8 with corefonts
 General cleanup of typos and misspellings in Table.pm
 Minimum Perl 5.10 in Makefile.PL (#53) 
 More cleanup of text in Table.pm
 Add tools (util) for running PerlCritic, t-tests, examples
 Clean up code to pass PerlCritic

Version 0.11.0 Colspan feature by domm

Version 0.10.0 Introduces underlined text in cells

Version 0.9.13 Fixed issue #33 - Desislav Kamenov

Version 0.9.12 - hotfix for failing tests - Desislav Kamenov

Version 0.9.11 Changes by contributors on GitHub - Keith Carangelo, Mohammad S Anwar

3264342 Added cell_render_hook subroutine to create hyperlinks
0fb2e57 Fixed broken link to Rick Measham's tutorial.
8361ec3 Fixed new_page_func valid setting
38610ec Header alignment default should be column alignment
e3ec184 Added parameter checking in the method table(). - Added unit test t/table.t script.
a73e67f Proposed fix to the CPANTS error as below: - Added standard unit test for MANIFEST file (t/manifest.t). - Removed MYMETA.json, MYMETA.yml and Makefile (auto generated files) - Added entry "t/manifest.t" to the MANIFEST file. - Updated MANIFEST.SKIP file.

Version 0.9.10 Changes by contributors on GitHub - azawawi, joenio

6fab323 Modernize hashbang #! to be more perlbrew friendly
58c36df Add relative link to Changes file
efaf173 Simple installation/development commmands
cfbcf48 More README.md simplification
a7889bc Fix README.md
43c2182 Fix warning: Useless use of greediness modifier '?' in regex
db4bc44 Fix #17, page parameter should be optional
f93ed16 "utf8" pragma solves issue with characters rendered wrong
e69524e fix script that test issue #15
5d5628f avoid warnind about use of greediness modifier

Version 0.9.8/9

Added MANIFEST.SKIP and fixed a broken build with 0.9.8
Added some utility methods to new()

Version 0.9.7 - for a detailed log and changed files visit GitHub
