@@ -9,6 +9,8 @@ Version 0.12.0 (preliminary)
  More cleanup of text in Table.pm
  Add tools (util) for running PerlCritic, t-tests, examples
  Clean up code to pass PerlCritic
+ Clean up examples to run with either API2 or Builder. PDFpref file to declare
+   which to use if both available
 
 Version 0.11.0 Colspan feature by domm
 
